changes to UX on smaller breakpoints as well as fix to landing

--- a/src/Styles/MainStyles.css
+++ b/src/Styles/MainStyles.css
@@ -420,20 +420,7 @@ h2 {
 #Landing {
     margin-top: 50px;
     margin-bottom: 50px;
-    padding-top: 50px;
-    background-color: black;
-    color: white;
-}
-
-#Landing h2 {
-    color: white;
-    background-color: black;
-    margin: 0;
-    padding-bottom: 24px;
-}
-
-#Landing .sub-header-wrapper {
-    margin-bottom: 16px;
+    color: black;
 }
 
 .btn-anchor {
@@ -444,17 +431,18 @@ h2 {
 
 .btn {
     margin-top: 16px;
-    color: white;
-    padding: 16px 0;
-    margin: 0 auto;
+    color: black;
+    padding: 8px;
+    margin: 8px;
     text-align: center;
-    border: 2px solid white;
+    border: 2px solid black;
     border-radius: 5px;
 }
 
 .btn:hover {
-    background-color: white;
-    color: Black;
+    background-color: black;
+    color: white;
+    transition: color .5s, background-color .5s;
 }
 
 .btn-text {
